--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Merhaba, Ben Doğu!</h1>
         <p>Yazılım tutkunu bir öğrenciyim, ilgilendiğim diller sırasıyla C++, Python ve Visual Basic.</p>
         <div class="buttons">
-          <a href="https://github.com/" target="_blank" class="btn github">GitHub</a>
+          <a href="https://github.com/d0gu77" target="_blank" class="btn github">GitHub</a>
           <a href="iletisim.html" class="btn contact">İletişim</a>
         </div>
       </div>
