--- a/iletisim.html
+++ b/iletisim.html
@@ -9,7 +9,7 @@
 <body style="background-color: #111; color: white; font-family: 'Poppins', sans-serif; text-align: center; padding: 100px;">
   <h1 style="font-size: 2.5rem; font-weight: 600;">İletişim Sayfası</h1>
   <p style="font-size: 1.2rem; margin-top: 1rem;">Discord Hesabım: @doguao</p>
-  <p style="font-size: 1.2rem; margin-top: 1rem;">Github Hesabım: www.github.com/d0gu77</p>
+  <p style="font-size: 1.2rem; margin-top: 1rem;">Mail Adresim: d0gu77@proton.me</p>
   <a href="index.html" class="btn back-button">← Geri Dön</a>
 </body>
 </html>
